--- a/titanic-dataset/Titanic_EDA.ipynb
+++ b/titanic-dataset/Titanic_EDA.ipynb
@@ -412,7 +412,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see in the above heat map, there are many NaN values in the age column. I will impute the NaN values. These are 2 methods to do so, both the methods give almost equally good results as proven in the link: -\n",
+        "As we can see in the above heat map, there are many NaN values in the age column. I will impute the NaN values. There are 2 methods to do so, both the methods give almost equally good results as proven in the link: -\n",
         "\n",
         "*   Imputing with the mean of the ages (on the basis of pClass and sex)\n",
         "*   Imputing  NaN values using a RandomForestRegressor (https://stackoverflow.com/a/63651173)\n",
@@ -603,7 +603,7 @@
       "cell_type": "markdown",
       "source": [
         "# Gender bias in rates of survival\n",
-        "It is evident from the above stat that females are more likely to have survived the titanic incident than males. It was so because women and children were given priority to get onto the boats (This was the policy that was adopted by the crew). \n",
+        "From the below stats it is evident that females are more likely to have survived the titanic incident than males. It was so because women and children were given priority to get onto the boats (This was the policy that was adopted by the crew). \n",
         " \n",
         "\n",
         "*   Percentage of females that survived: 74.2%\n",
@@ -687,7 +687,7 @@
       "cell_type": "markdown",
       "source": [
         "# Social bias in rates of survival\n",
-        "As is evident from the above graph, the upper class passengers were much more likely to have survived than the middle and the lower class passengers.\n",
+        "As is evident from the graph below, the upper class passengers were much more likely to have survived than the middle and the lower class passengers.\n",
         "\n",
         "*   Percentage of upper class that survived: 63.0%\n",
         "*   Percentage of middle class that survived: 47.3%\n",
